@@ -1,3 +1,13 @@
+2003-03-20  Gary Thomas  <gary@mlbassoc.com>
+
+	* src/common/serial.c: Only return -EAGAIN if no data moved.
+
+2003-03-11  Gary Thomas  <gary@mlbassoc.com>
+
+	* src/common/termiostty.c (termios_read): VMIN handling still wasn't
+	quite correct.  When VMIN > 0, at least VMIN characters should be
+	read.
+
 2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* cdl/io_serial.cdl: Fix doc link.
